# rust_actix_sqlx_boilerplate

./: .env  Cargo.toml  LICENSE  README.md
migrations/: 20231111185804_init.down.sql  20231111185804_init.up.sql
src/: main.rs  response.rs
src/api_schemas/: mod.rs
src/api_schemas/authentication/: confirm_code_request_schema.rs  login_request_schema.rs  mod.rs  register_request_schema.rs
src/middlewares/: mod.rs
src/middlewares/jwt/: auth_required.rs  jwt_middleware.rs  jwt_token.rs  mod.rs
src/models/authentication/: code.rs  mod.rs  token.rs  user.rs
src/modules/: config.rs  database.rs  mailer.rs  mod.rs
src/services/: account.rs  authentication.rs  health_checker.rs  mod.rs
src/shared/: mod.rs  tools.rs
