[package]
name = "rust_actix_sqlx_boilerplate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.4.0"
argon2 = "0.5.2"
chrono = { version = "0.4.31", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.1"
jsonwebtoken = "9.1.0"
lazy_static = "1.4.0"
lettre = { version ="0.11.1", features = ["native-tls"] }
rand = "0.8.5"
rand_core = { version = "0.6.4", features = ["std"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "macros", "postgres", "chrono", "uuid"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
